--- a/domaci2/index.html
+++ b/domaci2/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Ivan Turk" />
     <meta name="description" content="Car racing app - JS Homework" />
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="./multimedia/favicon.ico" />
     <link rel="stylesheet" href="./css/style.css" />
     <script defer src="./js/script.js"></script>
     <title>Car racing app</title>
