--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Ivan Turk" />
     <meta name="description" content="Javascript development Algebra" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="./homepage_multimedia/favicon.ico" />
+    <link rel="stylesheet" href="./homepage_style/style.css" />
     <title>Javascript - Algebra</title>
   </head>
   <body>
