pred5_arrays_functions

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           <br />
           <li><a href="./predavanja/pred4/index.html" target="_blank">Lecture 4 - Check person ex.</a></li>
           <br />
+          <li><a href="./predavanja/pred5/index.html" target="_blank">Lecture 5 - Arrays, Functions</a></li>
+          <br />
         </ul>
       </div>
       <div class="homeworks">
