--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
           <li><a href="./domaci1/index.html" target="_blank">Strings methods</a></li>
           <br />
           <li><a href="./domaci2/index.html" target="_blank">Car racing app</a></li>
+          <br />
+          <li><a href="./domaci3/index.html" target="_blank">Pogodi broj app</a></li>
         </ul>
       </div>
     </div>
