--- a/domaci3/index.html
+++ b/domaci3/index.html
@@ -15,12 +15,13 @@
     <section class="wrapper">
       <form class="form">
         <h1>Pogodi broj app</h1>
-        <label>Zamislio sam jedan broj od 1 - 100, pogodi koji?</label>
+        <label id="label">Zamislio sam jedan broj od 1 - 100, pogodi koji?</label>
         <input type="number" name="unos" id="unos" placeholder="Unesi cijeli broj od 1-100" required />
         <button id="btn" class="btn" onclick="klikBtn(event)">Pogodi broj!</button>
-        <button id="btn2" class="btn2" onclick="resetBtn(event2)">Igraj ponovno!</button>
-        <h3>Brojač neuspjelih pogodaka</h3>
-        <div class="brojac-box"></div>
+        <button id="btn2" class="btn2" onclick="resetBtn()">Igraj ponovno!</button>
+        <div id="arrow-box"></div>
+        <h3 id="msg"></h3>
+        <textarea id="statistika" cols="30" rows="2"></textarea>
       </form>
     </section>
   </body>
