--- a/domaci3/index.html
+++ b/domaci3/index.html
@@ -15,7 +15,10 @@
     <section class="wrapper">
       <form class="form">
         <h1>Pogodi broj app</h1>
-        <label id="label">Zamislio sam jedan broj od 1 - 100, pogodi koji?</label>
+        <label id="label"
+          >Zamislio sam jedan broj od 1 - 100...<br /><br />
+          Pogodi koji ?</label
+        >
         <input type="number" name="unos" id="unos" placeholder="Unesi cijeli broj od 1-100" required />
         <button id="btn" class="btn" onclick="klikBtn(event)">Pogodi broj!</button>
         <button id="btn2" class="btn2" onclick="resetBtn()">Igraj ponovno!</button>
