--- a/domaci3/index.html
+++ b/domaci3/index.html
@@ -23,6 +23,7 @@
         <button id="btn" class="btn" onclick="klikBtn(event)">Pogodi broj!</button>
         <button id="btn2" class="btn2" onclick="resetBtn()">Igraj ponovno!</button>
         <div id="arrow-box"></div>
+        <h3 id="msg"></h3>
         <textarea id="statistika" cols="30" rows="3"></textarea>
       </form>
     </section>
