--- a/domaci3/index.html
+++ b/domaci3/index.html
@@ -25,6 +25,7 @@
         <div id="arrow-box"></div>
         <h3 id="msg"></h3>
         <textarea id="statistika" cols="30" rows="3"></textarea>
+        <div id="nagrada"><img src="./multimedia/homer.gif" /></div>
       </form>
     </section>
   </body>
