--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           <br />
           <li><a href="./predavanja/pred5/index.html" target="_blank">Lecture 5 - Arrays, Functions</a></li>
           <br />
+          <br />
+          <li><a href="./predavanja/pred6/index.html" target="_blank">Lecture 6 - Objects, Scope...</a></li>
+          <br />
         </ul>
       </div>
       <div class="homeworks">
