--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
           <br />
           <li><a href="./predavanja/pred6/index.html" target="_blank">Lecture 6 - Objects, Scope...</a></li>
           <br />
+          <li><a href="./predavanja/pred7/index.html" target="_blank">Lecture 7 - DOM,BOM, JEST</a></li>
+          <br />
         </ul>
       </div>
       <div class="homeworks">
